--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -31,9 +31,10 @@ html, body {
 }
 
 .grid-container {
+    margin: 10vh ;
     display: grid;
-    grid-template-columns: 200px 200px 200px;
-    grid-template-rows: 200px 200px;
+    grid-template-columns: 300px 300px 300px;
+    grid-template-rows: 250px 250px;
     gap: 32px;
 }
 
