--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,7 @@
 
 html, body {
     margin: 0px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .flex-container {
@@ -8,23 +9,51 @@ html, body {
     flex-direction: column;
 }
 
+h1 { color: white;
+}
+
 .header {
     background-color: black;
-    
+    display: flex;
+    flex-direction: row;
     height: 100px;
+    align-items: center;
     flex: 1 1 auto;
+}
+
+#addBook {
+    background-color: darkgreen;
+    border: 0px;
+    height: 45%;
+    width: 10%;
+    margin-left: auto;
+    margin-right: 10%;
+    border-radius: 30px;
+    font-weight: 900;
+    color: white;
+}
+
+
+
+#addBook:active {
+    background-color: green;
+    box-shadow: inset 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
+    
+}
+
+#header_title {
+    margin-left: 5%;
 }
 
 .footer {
     background-color: black;
-    
     height: 100px;
     flex: 1 1 auto;
 }
 
 
 .library {
-    background: bisque;
+    background: gray;
     
     height: 90vh;
     flex: 1 1 auto;
@@ -39,6 +68,6 @@ html, body {
 }
 
 .card {
-    background-color: peachpuff;
+    background-color: rgb(89, 123, 161);
     border: 1px solid black;
 }
