--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,6 +12,18 @@ html, body {
 h1 { color: white;
 }
 
+
+/* The popup form - hidden by default */
+.form-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+  }
+
+
 .header {
     background-color: black;
     display: flex;
