--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -26,6 +26,14 @@ html, body {
     color: black;
   }
 
+.grid-containter_2 {
+    display: grid;
+    grid-template-rows: 20% ;
+    gap: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 
 .header {
     background-color: black;
