--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -20,7 +20,7 @@ html, body {
     left: 35%;
     border: 3px solid black;
     z-index: 9;
-    background-color: white;
+    background-color: whitesmoke;
     height: 40%;
     width: 20%;
     color: black;
@@ -94,4 +94,21 @@ html, body {
 .card {
     background-color: rgb(89, 123, 161);
     border: 1px solid black;
+}
+
+
+
+#addBookBtnForm{
+    background-color: darkgreen;
+    color: white;
+    border: none;
+    height: 150%;
+}
+
+#cancelBookBtnForm{
+
+    background-color: darkred;
+    border: none;
+    color: white;
+    height: 150%;
 }
