--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -20,9 +20,10 @@ html, body {
     left: 35%;
     border: 3px solid black;
     z-index: 9;
-    background-color: whitesmoke ;
+    background-color: rgba(245, 245, 245, 0.767) ;
     height: 50%;
     width: 20%;
+    border-radius: 5px;
     color: black;
   }
 
@@ -42,18 +43,6 @@ html, body {
     height: 100px;
     align-items: center;
     flex: 1 1 auto;
-}
-
-#addBookbtn {
-    background-color: darkgreen;
-    border: 0px;
-    height: 45%;
-    width: 10%;
-    margin-left: auto;
-    margin-right: 10%;
-    border-radius: 30px;
-    font-weight: 900;
-    color: white;
 }
 
 
@@ -84,31 +73,61 @@ html, body {
 }
 
 .grid-container {
-    margin: 10vh ;
+    margin: 5vh ;
     display: grid;
-    grid-template-columns: 300px 300px 300px;
-    grid-template-rows: 250px 250px;
+    grid-template-columns: 200px 200px 200px 200px;
+    grid-template-rows: 300px 300px;
     gap: 32px;
 }
 
-.card {
-    background-color: rgb(89, 123, 161);
+.add_card {
+   
+    background-color: rgba(245, 245, 245, 0.315);
+    border-radius: 10px;
+    box-shadow:  15px 5px 5px 5px rgba(0, 0, 0, 0.2);
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.add_card:active {
+    background-color: rgba(245, 245, 245, 0.432);
+    
 }
 
 
+
+#add_book{
+    
+    justify-content: center;
+    height: 60px;
+    align-items: center;
+}
 
 #addBookBtnForm{
     background-color: darkgreen;
     color: white;
     border: none;
-    height: 150%;
+    height: 40px;
 }
+
+#addBookBtnForm:active{
+    box-shadow:  inset 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+    background-color: rgb(0, 121, 0);
+}
+
 
 #cancelBookBtnForm{
 
     background-color: darkred;
     border: none;
     color: white;
-    height: 150%;
+    height: 40px;
+}
+
+#cancelBookBtnForm:active{
+    box-shadow:  inset 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+    background-color: rgb(168, 5, 5);
 }
