--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -113,9 +113,12 @@ html, body {
     height: 40px;
 }
 
+#addBookBtnForm:hover{
+    background-color: rgb(0, 121, 0);
+}
+
 #addBookBtnForm:active{
     box-shadow:  inset 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-    background-color: rgb(0, 121, 0);
 }
 
 
@@ -127,7 +130,10 @@ html, body {
     height: 40px;
 }
 
+#cancelBookBtnForm:hover{
+    background-color: rgb(168, 5, 5);
+}
+
 #cancelBookBtnForm:active{
     box-shadow:  inset 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-    background-color: rgb(168, 5, 5);
 }
