--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -40,11 +40,11 @@ html, body {
     background-color: black;
     display: flex;
     flex-direction: row;
-    height: 100px;
+    height: 80px;
     align-items: center;
     flex: 1 1 auto;
-    
-    
+    box-shadow:  1px 10px 52px 1px rgba(0, 0, 0, 0.2);
+    z-index: 9001;
 }
 
 
