added book author and book pages to cards

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -175,3 +175,11 @@ input {
 height: 30px;
 
 }
+
+
+input:focus {
+    outline: none;
+    border-color: rgb(65, 110, 196);
+    box-shadow: 0 0 10px #719ECE;
+    
+    }
