--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -200,8 +200,9 @@ html, body {
     margin-right: auto;
     align-self:center;
     z-index: 2;
-    opacity: 50%;
+    opacity: 0%;
     z-index: 122;
+    color: white;
 }
 
 .bookAuthor {
@@ -209,8 +210,9 @@ html, body {
     margin-left: auto;
     margin-right: auto;
     align-self:center;
-    opacity: 50%;
+    opacity: 0%;
     z-index: 122;
+    color: white;
 }
 
 .bookPages {
@@ -218,8 +220,9 @@ html, body {
     margin-left: auto;
     margin-right: auto;
     align-self:center;
-    opacity: 50%;
+    opacity: 0%;
     z-index: 122;
+    color: white;
 }
 
 .bookCover {
