--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -266,3 +266,26 @@ input:focus {
 
 
 
+#clearStorageLocal {
+    display: flex;
+    height: 50px;
+    margin-left: 75%;
+    background-color: darkred;
+    z-index: 122;
+    align-items: center;
+    border: 0px;
+    font-weight: 700;
+    color: white;
+
+}
+
+#clearStorageLocal:hover {
+   
+    background-color: rgb(192, 2, 2);
+}
+
+
+#clearStorageLocal:active {
+   
+    box-shadow: inset 0 0 10px #0a0a0a;
+}
