--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -269,13 +269,14 @@ input:focus {
 #clearStorageLocal {
     display: flex;
     height: 50px;
-    margin-left: 75%;
+    margin-left: 65%;
     background-color: darkred;
     z-index: 122;
     align-items: center;
     border: 0px;
     font-weight: 700;
     color: white;
+    border-radius: 10px;
 
 }
 
@@ -286,6 +287,34 @@ input:focus {
 
 
 #clearStorageLocal:active {
+   
+    box-shadow: inset 0 0 10px #0a0a0a;
+}
+
+
+
+
+#loadSampleButton {
+    display: flex;
+    height: 50px;
+    margin-left: 1%;
+    background-color: darkblue;
+    border-radius: 10px;
+    z-index: 122;
+    align-items: center;
+    border: 0px;
+    font-weight: 700;
+    color: white;
+
+}
+
+#loadSampleButton:hover {
+   
+    background-color: rgb(4, 4, 184);
+}
+
+
+#loadSampleButton:active {
    
     box-shadow: inset 0 0 10px #0a0a0a;
 }
