--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -124,14 +124,15 @@ html, body {
 
 
 #addBookBtnForm{
-    background-color: darkgreen;
+    background-color: rgb(39, 10, 143);
     color: white;
     border: none;
     height: 40px;
+    border-radius: 20px;
 }
 
 #addBookBtnForm:hover{
-    background-color: rgb(0, 121, 0);
+    background-color: rgb(57, 19, 194);
 }
 
 #addBookBtnForm:active{
@@ -144,6 +145,7 @@ html, body {
     border: none;
     color: white;
     height: 40px;
+    border-radius: 20px;
 }
 
 #cancelBookBtnForm:hover{
@@ -161,6 +163,11 @@ html, body {
     border: none;
     color: white;
     height: 40px;
+    border-radius: 20px;
+}
+
+#isRead:active{
+    box-shadow:  inset 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -185,13 +192,41 @@ html, body {
     z-index: 1;
     width:200px;
     height: 300px;
-
-    grid-template-rows: 20% ;
     
+    grid-template-rows: 20% ;
+    position: relative;
     margin-left: 5%;
     margin-right: 5%;
     
 }
+
+.deleteButton{
+    height: 50px;
+    width: 80%;
+    margin-left: 10%;
+    opacity: 0%;
+    background-color: darkred;
+    z-index: 122;
+    border: 0px;
+    color: rgb(230, 227, 227);
+    border-radius: 20px;
+}
+
+.readButton{
+  
+    opacity: 80%;
+    border: 0px;
+    left: 10px;
+    z-index: 122;
+    color: rgb(230, 227, 227, 0);
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    
+
+}
+
+
 
 .bookTitle {
     
@@ -229,6 +264,7 @@ html, body {
     width:200px;
     height: 300px;
     z-index: 1;
+    
 }
 
 /* .bookCover:hover {
@@ -236,19 +272,7 @@ html, body {
 } */
 
 
-.readButton{
-    height: 50px;
-    opacity: 0%;
-    background-color: darkgray;
-    z-index: 122;
-}
 
-.deleteButton{
-    height: 50px;
-    opacity: 0%;
-    background-color: darkred;
-    z-index: 122;
-}
 
 
 
